<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AvishekKMMIC</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_button">Log in</string>
    <string name="home_today">Today</string>
    <string name="home_logout">Logout</string>
    <string name="survey_detail_start">Start Survey</string>
    <string name="survey_question_submit">Submit</string>
    <string name="nps_not_ikely">Not at all Likely</string>
    <string name="nps_likely">Extremely Likely</string>
    <string name="thank_you_message">Thanks for taking the survey.</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning!</string>
    <string name="quit_survey_message">Are you sure you want to quit the survey?</string>
</resources>
